# cgi-challenge

./: CHANGELOG  CMakeLists.txt  CTestConfig.cmake  README.md
doc/: CMakeLists.txt  challenge_description.md  design_considerations.md  doxygen.conf.in  testdata.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  process_logs.cc
src/lib/: CMakeLists.txt  DateTime.cc  DateTime.h  Interval.h  LogData.cc  LogData.h  LogEntry.cc  LogEntry.h  TimePoint.cc  TimePoint.h
src/test/: CMakeLists.txt  test_DateTime.cc  test_Interval.cc  test_LogData.cc  test_LogEntry.cc  test_TimePoint.cc
testdata/: testdata-case1.txt  testdata-case2.txt  testdata-case3.txt  testdata-case4.txt  testdata-case5.txt
